--- a/Olympiad_Java/app/src/main/res/layout/content_main.xml
+++ b/Olympiad_Java/app/src/main/res/layout/content_main.xml
@@ -1,20 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
+    android:background="#d3d3d3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="upscaleapps.olympiad_java.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="180dp"
+        android:background="#ffffff"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:id="@+id/userEmailET"
+        android:hint="Email" />
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="40dp"
+        android:background="#ffffff"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/userPassET"
+        android:hint="Password" />
+
+
+    <Button
+        android:text="Login"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="60dp"
+        android:layout_gravity="center"
+        android:background="#ffffff"
+        android:id="@+id/loginButton" />
+
+
+    <Button
+        android:text="Sign Up"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:background="#ffffff"
+        android:id="@+id/signUpButton" />
+
+
+</LinearLayout>
