--- a/Olympiad/app/src/main/res/layout/activity_tabbar.xml
+++ b/Olympiad/app/src/main/res/layout/activity_tabbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,4 +31,4 @@
         android:id="@+id/viewPager">
     </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+</RelativeLayout>
