--- a/Olympiad/app/src/main/res/layout/fragment_message.xml
+++ b/Olympiad/app/src/main/res/layout/fragment_message.xml
@@ -1,13 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="upscaleapps.olympiad.Message.MessageFragment">
+    tools:context="upscaleapps.olympiad.Message.MessageFragment"
+    android:id="@+id/viewFrag">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/conversationsList"
+        android:layout_marginTop="112dp" />
 
-</FrameLayout>
+</RelativeLayout>
