--- a/Olympiad/app/src/main/res/layout/activity_login.xml
+++ b/Olympiad/app/src/main/res/layout/activity_login.xml
@@ -1,50 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cccccc">
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginTop="180dp"
-        android:background="#ffffff"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/userEmailET"
-        android:hint="Email" />
+    android:background="@color/colorPrimaryDark">
 
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginTop="40dp"
-        android:background="#ffffff"
+        android:layout_height="44dp"
+        android:background="@color/colorPrimary"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/userPassET"
-        android:hint="Password" />
-
+        android:hint="Password"
+        android:elevation="24dp"
+        android:paddingLeft="10dp"
+        android:textColorHint="#999"
+        android:textColor="#FFF"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_below="@+id/userEmailET"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:text="Login"
         android:layout_width="120dp"
         android:layout_height="40dp"
-        android:layout_marginTop="60dp"
         android:layout_gravity="center"
-        android:background="#ffffff"
-        android:id="@+id/loginButton" />
-
+        android:background="#00D050"
+        android:id="@+id/loginButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/signUpButton"
+        android:textStyle="bold" />
 
     <Button
         android:text="Sign Up"
         android:layout_width="120dp"
         android:layout_height="40dp"
-        android:layout_marginTop="30dp"
         android:layout_gravity="center"
-        android:background="#ffffff"
-        android:id="@+id/signUpButton" />
+        android:background="#FDCC03"
+        android:id="@+id/signUpButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#FFF"
+        android:textStyle="bold" />
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/background"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:id="@+id/app_logo"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/colorPrimary"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:id="@+id/userEmailET"
+        android:hint="Email"
+        android:elevation="24dp"
+        android:paddingLeft="10dp"
+        android:textColorHint="#999"
+        android:textColor="#FFF"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_below="@+id/app_logo"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="8dp" />
+
+</RelativeLayout>
