--- a/Olympiad/app/src/main/res/layout/activity_message.xml
+++ b/Olympiad/app/src/main/res/layout/activity_message.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#24242f">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/messagesList" />
+        android:id="@+id/messagesList"
+        android:background="#24242f" />
 
     <LinearLayout
         android:layout_width="match_parent"
