--- a/Olympiad/app/src/main/res/layout/activity_register_a.xml
+++ b/Olympiad/app/src/main/res/layout/activity_register_a.xml
@@ -1,81 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#cccccc">
+    android:background="#24242f">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/backBT"/>
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:id="@+id/backBT"
+        android:layout_margin="12dp"
+        android:background="@drawable/ic_action_back" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/nextBT"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/ic_action_next"
+        android:layout_height="32dp"
+        android:layout_width="32dp"
+        android:layout_margin="12dp" />
+    <TextView
+        android:text="Edit"
+        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:gravity="center"
+        android:textColor="#fff"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_height="54dp"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentTop="true" />
 
-<RelativeLayout
+    <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#cccccc"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_gravity="center_horizontal"
-            android:background="#ffffff"
-            android:id="@+id/regIV"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_height="300dp"
-            android:layout_marginBottom="8dp" />
+        android:layout_alignParentStart="true"
+    android:background="#24242F"
+        android:layout_below="@+id/nextBT">
 
 
-        <EditText
+    <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="#ffffff"
+            android:background="@color/colorPrimary"
             android:id="@+id/regReasonET"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:layout_below="@+id/regIV"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="8dp"
-            android:hint="Name" />
+            android:hint="Name"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:paddingLeft="10dp"
+            android:textColor="#fff" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="#ffffff"
+            android:background="@color/colorPrimary"
             android:id="@+id/regAgeET"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:layout_below="@+id/regReasonET"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="8dp"
-            android:hint="Age" />
+            android:hint="Age"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:paddingLeft="10dp"
+            android:textColor="#fff" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="#ffffff"
+            android:background="@color/colorPrimary"
             android:id="@+id/regLocationET"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:layout_below="@+id/regGenderSP"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="8dp"
-            android:hint="Location" />
+            android:hint="Location"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:paddingLeft="10dp"
+            android:textColor="#fff" />
 
         <Spinner
             android:layout_width="match_parent"
@@ -84,8 +105,22 @@
             android:paddingTop="12dp"
             android:layout_below="@+id/regAgeET"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="20dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="8dp" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_gravity="center_horizontal"
+            android:background="#24242f"
+            android:id="@+id/regIV"
+            android:cropToPadding="false"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="8dp"
+            android:layout_height="280dp" />
+
     </RelativeLayout>
 </RelativeLayout>
