--- a/Olympiad/app/src/main/res/layout/activity_tabbar.xml
+++ b/Olympiad/app/src/main/res/layout/activity_tabbar.xml
@@ -6,7 +6,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="upscaleapps.olympiad.TabBar.TabBarActivity">
+    tools:context="upscaleapps.olympiad.TabBar.TabBarActivity"
+    android:background="#24242f">
+
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
@@ -19,15 +21,22 @@
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
             android:id="@+id/tabLayout"
             app:tabMode="fixed"
+            app:tabTextColor="#999999"
+            app:tabSelectedTextColor="#FFFFFF"
+            app:tabIndicatorColor="#FFFFFF"
             app:tabGravity="fill">
+
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
     
     <android.support.v4.view.ViewPager
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textColor="@android:color/white"
         android:id="@+id/viewPager">
     </android.support.v4.view.ViewPager>
 
