--- a/Olympiad/app/src/main/res/layout/fragment_search.xml
+++ b/Olympiad/app/src/main/res/layout/fragment_search.xml
@@ -5,13 +5,24 @@
     tools:context="upscaleapps.olympiad.Search.SearchFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#24242F">
+
+        <Spinner
+            android:layout_marginTop="150dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/spinner_item"
+            android:background="#FFFFFF"
+            android:id="@+id/spinner" />
 
         <ListView
             android:id="@+id/profiles_list_view"
+            android:layout_toEndOf="@+id/spinner"
+            android:layout_marginTop="50dp"
             android:layout_height="match_parent"
             android:layout_width="match_parent">
         </ListView>
