--- a/Olympiad/app/src/main/res/layout/message_row.xml
+++ b/Olympiad/app/src/main/res/layout/message_row.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:id="@+id/message_row"
-        android:background="@color/wallet_dim_foreground_holo_dark"
+        android:background="#30303c"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
@@ -20,7 +20,8 @@
             android:textColor="@android:color/white"
             android:layout_alignParentStart="true"
             android:layout_marginRight="10dp"
-            android:layout_toStartOf="@+id/userTime" />
+            android:layout_toStartOf="@+id/userTime"
+            android:textStyle="bold" />
 
         <TextView
             android:text="TextView"
@@ -29,12 +30,12 @@
             android:id="@+id/userTime"
             android:layout_marginRight="10dp"
             android:gravity="right"
-            android:textSize="10sp"
+            android:textSize="14sp"
             android:layout_alignBottom="@+id/userName"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="13dp"
             android:layout_alignTop="@+id/userName"
-            android:layout_marginTop="4dp" />
+            android:textColor="#999" />
 
         <TextView
             android:text="TextView"
@@ -42,7 +43,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/userMessage"
             android:layout_marginLeft="10dp"
-            android:textColor="@android:color/white"
+            android:textColor="#999"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true" />
