--- a/Olympiad/app/src/main/res/layout/activity_register_a.xml
+++ b/Olympiad/app/src/main/res/layout/activity_register_a.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -81,22 +81,17 @@
             android:paddingLeft="10dp"
             android:textColor="#fff" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <Button
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:id="@+id/locationBT"
             android:layout_gravity="center_horizontal"
-            android:background="@color/colorPrimary"
-            android:id="@+id/regLocationET"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:layout_below="@+id/regGenderSP"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="8dp"
-            android:hint="Location"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:paddingLeft="10dp"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            android:layout_alignEnd="@+id/regGenderSP" />
 
         <Spinner
             android:layout_width="match_parent"
@@ -123,4 +118,14 @@
             android:layout_height="280dp" />
 
     </RelativeLayout>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
 </RelativeLayout>
