--- a/Olympiad/app/src/main/res/layout/fragment_message.xml
+++ b/Olympiad/app/src/main/res/layout/fragment_message.xml
@@ -6,12 +6,16 @@
     android:id="@+id/viewFrag">
 
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/conversationsList"
-        android:layout_marginTop="112dp" />
+    <!--<ListView-->
+        <!--android:layout_width="match_parent"-->
+<!--<<<<<<< Updated upstream-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:id="@+id/conversationsList"-->
+        <!--android:layout_marginTop="112dp" />-->
+<!--=======-->
+        <!--android:layout_height="match_parent" />-->
+<!--&gt;>>>>>> Stashed changes-->
 
 </RelativeLayout>
