--- a/Olympiad/app/src/main/res/layout/row_item.xml
+++ b/Olympiad/app/src/main/res/layout/row_item.xml
@@ -44,5 +44,12 @@
             android:text="Users Location is "
             android:textColor="@android:color/darker_gray" />
 
+        <TextView
+            android:id="@+id/userDistanceTV"
+            android:layout_width="165dp"
+            android:layout_height="wrap_content"
+            android:text="Users Distance is "
+            android:textColor="@android:color/darker_gray" />
+
     </LinearLayout>
 </RelativeLayout>
