--- a/Olympiad/app/src/main/res/layout/activity_login.xml
+++ b/Olympiad/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:id="@+id/background"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:scaleType="centerCrop" />
 
     <ImageView
         android:layout_width="300dp"
