--- a/Olympiad/app/src/main/res/layout/fragment_profile.xml
+++ b/Olympiad/app/src/main/res/layout/fragment_profile.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentEnd="true"
         android:background="#24242c"
         android:scaleType="centerCrop"
-        android:layout_height="320dp"
+        android:layout_height="280dp"
         android:layout_marginBottom="10dp" />
 
     <EditText
@@ -153,6 +153,17 @@
         android:textColor="#FFFFFF"
         android:background="@color/colorPrimary"
         android:layout_below="@+id/labelMotivation"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Invite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonInvite"
+        android:textColor="#FFFFFF"
+        android:background="#ffae19"
+        android:layout_below="@+id/buttonLogout"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
